Fixing vertical align mixin

--- a/public/less/app/pages/timeline/fb/fb-box.less
+++ b/public/less/app/pages/timeline/fb/fb-box.less
@@ -179,14 +179,9 @@
 		margin-bottom: 8px;
 		font-size: 11px;
 		color: #999;
-		height: 20px;
-		line-height: 20px;
-		 > a,
-		 > div{
-			.inline-block();
-			vertical-align: middle;
-		}
 
+		.vertical-align();
+	
 		> div{
 			margin-left: 2px;
 			> span{
