--- a/public/less/core/mixins.less
+++ b/public/less/core/mixins.less
@@ -38,6 +38,21 @@
   vertical-align: middle;
 }
 
+.vertical-align(@height){
+  display: block;
+  height: @height;
+  line-height: @height;
+
+  > *{
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+
 .inline-block(){
   display: inline-block;
 }
